Fixed bug with project relative configs w/ properties expansion. Added properties chaining.